@@ -31,6 +31,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13872: socket.detach() now marks the socket closed (as mirrored
+  in the socket repr()).  Patch by Matt Joiner.
+
 - Issue #14406: Fix a race condition when using ``concurrent.futures.wait(
   return_when=ALL_COMPLETED)``.  Patch by Matt Joiner.
 
